css/style.css
*, *:before, *:after {
  box-sizing: border-box;
}

html {
  font-size: 10px;
}

header {
color: #425458;
}

/*** FONTS ***/

p {
  font-family: "Open Sans";
  font-size: 1.6rem;
  line-height: 2.8rem;
}

b {
  font-weight: bold;
}

i {
  font-style: italic;
}

h1 {
  font-family: "Playfair Display";
  font-size: 4.8rem;
  font-weight: bold;
  line-height: 6.4rem;
  letter-spacing: .02rem;
}

h2 {
  font-family: "Playfair Display";
  font-size: 3.2rem;
  font-weight: bold;
  letter-spacing: .04rem;
  line-height: 4.8rem;

}

h3 {
  font-family: "Playfair Display";
  font-size: 2.4rem;
  font-weight: bold;
  letter-spacing: .02rem;
  line-height: 3.4rem;
}

h4 {
  font-family: "Playfair Display";
  font-size: 2rem;
  font-weight: bold;
  line-height: 3.5rem;
}

h5 {
  font-family: "Playfair Display";
  font-size: 1.8rem;
  line-height: 3.5rem;
}

h6 {
  font-family: "Playfair Display";
  font-size: 2.4rem;
  font-variant: small-caps;
  font-weight: bold;
  letter-spacing: .02rem;
  line-height: 3.4rem;
}



/* NAVIGATION BAR */

nav {
  background-color: white;
  display:flex;
  justify-content: center;
  position: sticky;
  position: -webkit-sticky;
  text-align: center;
  top: 0;
  width: 100%;
  z-index: 4;
}

nav ul {
  align-items: center;
  display: flex;
  height:6.5rem;
  justify-content: center;
  width: 33.3rem;
}

nav ul li a {
  color: #2F3B3E;
  font-family: "Playfair Display";
  font-size: 1.8rem;
  font-variant: small-caps;
  letter-spacing: 5%;
  text-decoration: none;
}

nav ul li:first-child {
  margin-right: auto;
}

nav ul li:last-child {
  padding-left: 3.9rem;
}

a {
text-decoration: none;
}

nav a:visited {
  color: #2F3B3E;
}

nav a:hover {
  color: #E8A153;
}

nav a:active {
  color: #E8A153;
}

figure {
  margin-bottom: 3.2rem;
  margin-top: 3.2rem;
}

figcaption {
  font-family: "Open Sans";
  font-size: 1.4rem;
  line-height: 2.4rem;
  padding-top: 1rem;
  text-align: center;
}



/*** BACK TO TOP BUTTON ***/
#myBtn {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  bottom: 20px;
  color: white;
  cursor: pointer;
  display: none;
  outline: none;
  padding: 0px;
  position: fixed;
  right: 30px;
  z-index: 99;
}

#myBtn:hover {
  background: url("/images/project/backtop.svg") no-repeat;
}


/* HOME PAGE STYLING */
.logo {
  height:3.5rem;
}

/****** CONTAINER1 + LARGE IS USED FOR RESPONSIVE LAYOUT ******/
.container, .container1, .container-large {
  margin: auto;
  width: 33.3rem;
}

.intro {
  margin-bottom: 15rem;
  margin-top: 10rem;
  text-align: center;
  width: 29.3rem;
}


/* PADDING TO CENTER HOME HERO IMAGE */
.priscillank {
  height: 25rem;
  padding-left: 5rem;
  padding-top: 5rem;
}

.hero-container{
  background-color: #F0E6E2;
  margin: auto;
  margin-top: 5rem;
  text-align: center;
}

.projects-container {
  padding-bottom: 3rem;
  padding-top: 6rem;
}


/* STYLING FOR SPAN CLASSES FOR INTRO/ABOUT PAGES */
.myName {
  font-family: "Playfair Display";
  font-size: 2rem;
  font-weight: bold;
  line-height: 3.5rem;
}

.myName-about {
  color: #2F3B3E;
  font-family: "Playfair Display";
  font-size: 3.2rem;
  font-weight: bold;
  letter-spacing: .04rem;
  line-height: 4.8rem;
}

.about-bold {
  color: #2F3B3E;
  font-family: "Playfair Display";
  font-size: 2rem;
  font-weight: bold;
  line-height: 3.5rem;
}



/* THIS REFERS TO THE THUMBNAILS FOR CASE STUDIES IN THE HOME PAGE */
.content-image-mobile {
  width: 100%;
}

.content-details {
  color: #2F3B3E;
  margin: auto;
  padding-bottom: 4rem;
  padding-top: 3rem;
  width: 23rem;
}

.content-text {
  padding-top: 1rem;
}

.content-thumbnail {
  box-shadow: 0px 4px 4px rgba(47, 59, 62, 0.25);
  margin: 0 auto;
  margin-bottom: 6rem;
  overflow: hidden;
  position: relative;
  text-align: center;
  width: 100%;
}



/* ABOUT ME PAGE STYLING */

.about {
  color: #425458;
  padding-bottom: 5rem;
  padding-top:3.2rem;
}

.about-intro h2 {
  color: #E8A153;
}

.about-intro {
  padding-top: 3.2rem;
}

.about-main {
  margin-bottom: 10rem;
}

.col1-about figure {
  margin-top: 0;
}

/* CASE STUDY/PROJECT PAGE STYLING */

/* Project Information header */
/*padding-bottom for mobile */
.container h1 {
  margin-bottom: 3.2rem;
}

.container p {
  margin-bottom: 1.8rem;
}

.item-1 {
  padding-bottom: 1.8rem;
}

.project-hero {
  padding-top: 5rem;
}

.project-hero figure {
  margin-bottom: 0;
}

.item-2 p {
  margin-bottom: 1.8rem;
}

/* LINKS WITH ARROWS */

.project-links  {
  color: #E8A153;
  font-family: "Playfair Display";
  font-size: 1.7rem;
  font-weight: bold;
  letter-spacing: .01rem;
  line-height: 2.8rem;
  text-decoration: none;
}




/* CASE STUDY ROLES, TOOLS, DURATIION, DELIVERABLES */

.info-grid {
  padding-bottom: 3.2rem;
  padding-left: 7.5rem;
  padding-top: 3.2rem;
}

.item-a {
  padding-bottom: 1.8rem;
}

.item-c {
  padding-bottom: 1.8rem;
}

.item-b, .item-d {
  padding-bottom: 3.2rem;
}

/* PINK BACKGROUND */

.bg-color-pink {
  background-color: #F0E6E2;
}


/* HR STYLING FOR MOBILE */
hr {
  background-image: url("https://priscillank.github.io/myPortfolio/images/project/userflow-divider.png");
  background-size: cover;
  border: 0;
  height: 17.3rem;
}


/* PROBLEM + SOLUTION */
.project-main h3 {
  color: #2F3B3E;
  padding-bottom: .8em;
}

.project-main p {
  color: #425458;
}

.cow-wrap, .solution-wrap {
  text-align: center;
}

.sol-img {
  height:auto;
  width:100%;
  margin-top: 3.2rem;
}

.section-wrap {
  border-bottom: 1px solid #F0E6E2;
  padding-bottom: 5rem;
  padding-top: 3.2rem;
  text-align: left;
}


/* For sections that do not need a bottom-border MOBILE*/
.section-wrap-none {
  padding-bottom: 5rem;
  padding-top: 3.2rem;
  text-align: left;
}

/* For sections that do not need a bottom-border or padding. MOBILE*/
.section-wrap-nobottom {
  padding-top: 3.2rem;
  text-align: left;
}






/* USER SURVEY GRAPH SECTIION */

.fig-section-graph {
  margin-bottom:3.2rem;
  margin-top: 2rem;
  width: 33.3rem;
}
/* ... */

